--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "static-template-exodevhub",
-  "description": "Basic Template",
+  "name": "site_exoleaders",
+  "description": "Exo Leaders static website",
   "version": "1.0.0",
   "private": true,
   "keywords": [
