--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-image": "^2.0.5",
     "gatsby-plugin-canonical-urls": "^2.0.5",
     "gatsby-plugin-emotion": "^4.0.1",
+    "gatsby-plugin-google-analytics": "^2.0.10",
     "gatsby-plugin-purgecss": "^3.1.0",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.5",
@@ -54,6 +55,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
+    "react-hotjar": "^1.0.11",
     "typescript": "^3.0.3"
   },
   "devDependencies": {
@@ -63,6 +65,7 @@
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/react-helmet": "^5.0.7",
+    "gatsby-plugin-hotjar": "^1.0.1",
     "gh-pages": "^2.0.0",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
